# proto

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CONTRIBUTING.md  CPPLINT.cfg  README.md  REUSE.toml  SECURITY.md  about.html  about_8dox.html  annotated.html  classexported__class.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5f6e528bd453356d4760482a22896efa.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespaces.html  pages.html  proto_8h.html  searchdata-v2.js  vcpkg.json  vcpkg.json.license
.github/: dependabot.yml
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  spell-targets.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in  conf.py.in
docs/pages/: about.dox
include/proto/: proto.h
src/: CMakeLists.txt  citation.proto  citation_group.proto  extracted_citation.proto  file_header.proto  identifiers.proto  language.proto  page.proto  proto.cc  revision.proto  revision_citations.proto  revision_map.proto  revisions_group.proto
src/citescoop/proto/: citation.proto  extracted_citation.proto  file_header.proto  language.proto  page.proto  revision_citations.proto  url.proto
src/citescoop/proto/openalex/: author.proto  work.proto
src/openalex/: institution.proto  work.proto
